[package]
name = "chunk_server" # or "chunk_server", etc.
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
bincode = "2.0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }